# line

./: CMakeLists.txt  CMakeLists.txt~  CMakeLists_old.txt  mainpage.dox  manifest.xml
input/: drawing_4.svg.save
nbproject/: Package-Default.bash  configurations.xml  project.xml
src/: AbstractDetector.cpp  AbstractDetector.h  AbstractObjectDetector.cpp  AbstractObjectDetector.h  AbstractStrategy.cpp  AbstractStrategy.h  BestLine.h  BmpFileIO.h  BmpImage.h  CameraService.cpp  CameraService.h  CannyFilterStategy.h  CannyStrategy.cpp  CannyStrategy.h  Circle.cpp  Circle.h  CircleDetector.cpp  CircleDetector.h  DetectedObject.h  DetectionParams.cpp  DetectionParams.h  DetectionSettings.cpp  DetectionSettings.h  DetectorTopic.cpp  DetectorTopic.h  EdgeFilterStrategy.h  IDetectedObject.h  Image.h  ImageFilter.h  ImageMap.h  ImageService.cpp  ImageService.h  KirshStrategy.cpp  KirshStrategy.h  Line.cpp  Line.cpp~  Line.h  LineDescribableObject.cpp  LineDescribableObject.h  LineDetector.cpp  (+55 more)
src/EdgeFilters/: CannyFilterStategy.h  EdgeFilterStrategy.h
src/Image/: Image.h  ImageMap.h
src/ImageFilters/: Complex.h  FFTransformer.h  GaussianFactory.h  IImageFilter.h  ImageFilter.h  ImageFilterFactory.h
src/ImageFilters/Frequency/: AbstractFFTImageFilter.h  FFTImageFIlter.h  FFTImageFilterBatch.h  FFTImageFilterBatchItem.h
src/ImageFilters/Kernel/: Kernel.h  NonSeparableKernel.h  SeparableKernel.h
src/ImageFilters/Spatial/: ImageFilter.h
src/ImageFilters/Spatial/Edge/: EdgeFilterStrategy.h  KirchFilterStrategy.h  PrewittFilterStrategy.h  RobertsFIlterStrategy.h  SobelFilterStrategy.h
src/Pixel/: IPixel.h  Pixel.h  PixelLUV.h  PixelXYZ.h
src/Shapes/: Circle.h  DetectedObject.cpp  DetectedObject.h  Ellipse.h  GeneralObject.h  IDetectedObject.h  LinePair.cpp  LinePair.h  Rectangle.h  ShapesCache.h
src/SvgExtractor/: SvgExtractor.cpp  SvgExtractor.h
src/SvgExtractor/SvgParser/: Svg.g~  Svg.tokens  SvgLexer.cpp  SvgLexer.hpp  SvgParser.cpp  SvgParser.hpp  SvgParser.hpp~
src/SvgExtractor/SvgParser/AST/: MovetoDrawtoCommandGroup.h  Node.cpp  Node.h  PositionManager.cpp  PositionManager.h  SvgPath.h
src/SvgExtractor/SvgParser/AST/Arguments/: Argument.cpp  Argument.h  ArgumentType.h  Coordinate.cpp  Coordinate.h  CoordinatePair.cpp  CoordinatePair.h  Flag.h
src/SvgExtractor/SvgParser/AST/Commands/: CloseCommand.cpp  CloseCommand.h  Command.cpp  Command.h  CurveToCommand.cpp  CurveToCommand.h  EllipticArCommand.h  HorizontalLineToCommand.h  LineToCommand.cpp  LineToCommand.h  MoveToCommand.cpp  MoveToCommand.h  QuadraticBezierCurveToCommand.h  SmoothCurveToCommand.h  SmoothQuadraticBezerCurveToCommand.h  VerticalLineToCommand.h
src/SvgExtractor/XMLParser/: XmlParser.h
src/SvgExtractor/XmlParser/: XmlParser.cpp
src/SvgParser/: Svg.g  SvgTraits.hpp
src/SvgParser/AST/: Node.h  PositionFactory.cpp  PositionFactory.h  PositionManager.h
src/SvgParser/AST/Commands/: CloseCommand.cpp  CurveToCommand.cpp  EllipticArCommand.h  LineToCommand.cpp  LineToCommand.h  MoveToCommand.cpp  MoveToCommand.h  SmoothCurveToCommand.h
src/ThreadPool/: Thread.h
src/Threading/: Thread.h  ThreadGroup.h
src/Utils/: Timer.cpp  Timer.h  Utils.h
src/XMLParser/: XmlParser.cpp
